--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.application.name=LimitService
+spring.application.name=limits-service
+server.port=8080
+spring.cloud.config.enabled=false
+pring.config.import=optional:configserver:
